/mess, /blog pages

--- a/app/templates/front.html
+++ b/app/templates/front.html
@@ -17,8 +17,7 @@ Front page
 
 <p>This is MeowCat!</p>
 
-<p>Meowcat will be a federated social networking platform using the 
-ActivityPub protocol.</p>
+<p>Meowcat will be a federated blogging, microblogging, and social networking platform using the ActivityPub protocol.</p>
 
 {% if currentUserName() %}
 <p>Welcome, {{currentUserName()}}.</p>
