--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -95,7 +95,7 @@ Uses SB-Admin
         Users</a></li>
         
       <li{{hpic('message')}}><a href="/messages">
-        <i class="fa fa-comment"></i>
+        <i class="fa fa-comment-o"></i>
         Messages</a></li>
         
   </ul>
