--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -28,6 +28,7 @@ Uses SB-Admin
 <link rel="stylesheet" href="/static/jquery-ui-timepicker-addon.css">
 <link rel="stylesheet" href="/static/bozen.css">
 <link rel="stylesheet" href="/static/app.css">
+<link rel="stylesheet" href="/static/message.css">
 
     <!-- Page Specific CSS -->
 
