--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -99,6 +99,10 @@ Uses SB-Admin
         <i class="fa fa-comment-o"></i>
         Messages</a></li>
         
+      <li{{hpic('messList')}}><a href="/messList">
+        <i class="fa fa-list-ul"></i>
+        New Messages</a></li>
+        
   </ul>
 </div>
 {% endblock leftbar %}
