--- a/app/templates/messRep.html
+++ b/app/templates/messRep.html
@@ -19,11 +19,13 @@ New Message or reply to message
 {{msg}}
 
 <p><br>
-<a href="" class="btn btn-info"><i class='fa fa-eye'></i> 
-Preview</a>
+<button class="btn btn-info" name="messRepButton" value="preview">
+<i class='fa fa-eye'></i> 
+Preview</button>
 &nbsp;
-<a href="" class="btn btn-success"><i class='fa fa-paper-plane'></i> 
-Enter Message</a>
+<button class="btn btn-success" name="messRepButton" value="enter">
+<i class='fa fa-paper-plane'></i> 
+Enter Message</button>
 </p>
 </form>
 
