--- a/app/templates/front.html
+++ b/app/templates/front.html
@@ -26,6 +26,10 @@ Front page
 log in</a>.</p>
 {% endif %}
 
+<p>In development: you can visit the 
+<a href='/admin'><i class='fa fa-cog'></i>
+Admin Site</a>.</p>
+
 {% endblock body %}
 
 
