--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -31,18 +31,40 @@ Account Settings</a></p>
 <i class='fa fa-rss'></i> RSS Feed</a></p>
 
 {#---------- follow button ----------#}
+<span id="followButton">
 {% if followButton=='follow' %}
-<button class='btn btn-success'><i class='fa fa-check-circle'></i>
+<button class='btn btn-success' onclick="follow(1)">
+<i class='fa fa-check-circle'></i>
 Follow @{{id}}
 </button>
 {% elif followButton=='unfollow' %}
-<button class='btn btn-danger'><i class='fa fa-times-circle'></i>
+<button class='btn btn-danger' onclick="follow(0)">
+<i class='fa fa-times-circle'></i>
 Unfollow @{{id}}
 </button>
 {% endif %}
-
+</span>
 
 {{endrow()}}
 {% endblock body %}
+
+{%block atend%}
+<script>
+var id={{idJson}};
+
+function follow(n){
+    /* n=1 means follow, n=0 means unfollow */
+    console.log
+    var u = "/x/follow/" + id + "/" + n;
+    $.ajax({
+        url: u,
+        method: "POST",
+    }).done(function(){
+        $("#followButton").html("[follow " + n + "]");
+    });
+}
+
+</script>
+{%endblock atend%}
 
 {# end #}
