--- a/app/templates/messRep.html
+++ b/app/templates/messRep.html
@@ -10,7 +10,7 @@ New Message or reply to message
 <h1><i class='fa fa-reply'></i> Reply to {{m.id()}}</h1>
 {{mh}}
 {%else%}
-<h1><i class='fa fa-share'></i> Create New Message</h1>
+<h1><i class='fa fa-comment-o'></i> Create New Message</h1>
 {%endif%}
 
 {%if hasPreview%}
