--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -28,7 +28,7 @@ Write new message</a></p>
 {{bio}}
 
 {% if currentUserName()==id %}
-<p><a class='btn btn-info' href="/accountSettings/{{id}}">
+<p><a class='btn btn-info' href="/accountSettings">
 <i class='fa fa-cog'></i> 
 Account Settings</a></p>
 {% endif %}
