--- a/app/templates/accountSettings.html
+++ b/app/templates/accountSettings.html
@@ -9,7 +9,7 @@ Settings for an account
 {{rowcol("md-9")}}
 <h1><i class='fa fa-cog'></i> Settings for @{{id}}</h1>
 
-<p>View <a href='/blog/{{id}}'>@{{id}}'s blog</a>.
+<p>View <a href='/blog/{{user._id}}'>@{{user._id}}'s blog</a>.
 
 <form method=POST>
 {{ai.buildForm()}}
