changes to admin site

--- a/app/templates/admin_col.html
+++ b/app/templates/admin_col.html
@@ -13,6 +13,14 @@ Lists all documents in the collection.
 <h1><i class='fa fa-cog'></i> Admin: {{colClass.classLogo()}} {{colName}}
 ({{count}})</h1>
 
+<p>
+<a class="btn btn-primary" href="/"><i class='fa fa-arrow-left'></i>
+Back to main site</a>
+&nbsp;
+<a class="btn btn-default" href="/admin"><i class='fa fa-cog'></i>
+Admin front page</a>
+</p>
+
 <p>Documents for collection {{colName}}. {{pag.info}}</p>
 
 {{docTable}}
