--- a/app/templates/admin_main.html
+++ b/app/templates/admin_main.html
@@ -28,6 +28,8 @@ The base template for Bozen admin, uses SB-Admin
 <link rel="stylesheet" href="/static/admin.css">
 
     <!-- Page Specific CSS -->
+<link rel="shortcut icon" type="image/png" 
+      href="/static/dbadmin_32x32.png">
 {% block extrahead %}{% endblock extrahead %}
 </head>
 
