--- a/app/templates/admin_doc.html
+++ b/app/templates/admin_doc.html
@@ -10,10 +10,18 @@ with urls /admin/doc/{colName}/{id}
 {% block body %}
 <h1>{{doc.logo()}} {{colName}}: {{doc.getName()}}</h1>
 
-<p>Document id is <tt>{{id}}</tt>. Go back to 
-  <a href='{{adminStub}}/col/{{colName}}'>
-    Admin: {{doc.classLogo()}} {{colName}}</a>.    
+<p>
+<a class="btn btn-primary" href="/"><i class='fa fa-arrow-left'></i>
+Back to main site</a>
+&nbsp;
+<a class="btn btn-default" href="/admin"><i class='fa fa-cog'></i>
+Admin front page</a>
+&nbsp;
+<a  class="btn btn-default" href='{{adminStub}}/col/{{colName}}'>
+Admin {{doc.classLogo()}} {{colName}}</a>
 </p>
+
+<p>Document id is <tt>{{id}}</tt>.</p>
 
 <form id="theForm" action="{{adminStub}}/doc/{{colName}}/{{id}}" 
       method="POST" enctype='multipart/form-data'>
