--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -11,13 +11,13 @@ Blog for a user
 {% endblock extrahead %}
 
 {% block body %}
-{{rowcol("md-9")}}
+{{rowcol("md-8")}}
 <h1><i class='fa fa-list-ul'></i> {{blogTitle}}</h1>
 
 <div id="messages">
 {{messages}}
 </div>
-{{col("md-3")}}
+{{col("md-4")}}
 <h2>@{{user.getNameH()}}'s blog</h2>
 {% if currentUserName()==id %}
 <p><a class='btn btn-primary' href="/messRep">
@@ -37,6 +37,7 @@ Account Settings</a></p>
 
 <h2><i class='fa fa-sliders'></i> Formatting Options</h2>
 <form id="formatingOptionForm" method=GET>
+<input type="hidden" name="x" value="x">
 {{fof.buildForm()}}
 </form>
 
