work on auto updates

--- a/app/templates/messList.html
+++ b/app/templates/messList.html
@@ -52,6 +52,8 @@ $("#id_mrf").change(foChanged);
 $("#id_au").change(foChanged);
 
 //--------------------------------------------------------------------
+{{lf.autoUpdateJS()}}
+;;;
 </script>
 {%endblock atend%}
 {# end #}
