--- a/app/templates/userList.html
+++ b/app/templates/userList.html
@@ -6,8 +6,12 @@ List of all users
 {% extends "main.html" %}
 
 {% block body %}
-<h1><i class='fa fa-user'></i> Users on this instance</h1>
+<div class='right-pagination'>{{pag.links}}</div>
+<h1><i class='fa fa-user'></i> Users on this instance ({{count}})</h1>
 
+<p>{{pag.info}}</p>
 {{table}}
+
+<div class='right-pagination'>{{pag.links}}</div>
 
 {% endblock body %}
