links to /followingMess

--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -31,7 +31,9 @@ Blog for a user
     <td style='text-align:center;'>{{numPosts}}</td>
     <td style='text-align:center;'>{{numHeadPosts}}</td>
     <td style='text-align:center;'>
-        <a href='/listFollowing/{{id}}'>{{numFollowing}}</a></td>
+        <a href='/listFollowing/{{id}}'>{{numFollowing}}</a> &nbsp;
+        <a href='/followingMess/{{id}}'><i class='fa fa-eye'></i></a>        
+    </td>
     <td style='text-align:center;'>
         <a href='/listFollowers/{{id}}'>{{numFollowers}}</a></td>
 </tr>
