--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -35,7 +35,10 @@ Blog for a user
         <a href='/followingMess/{{id}}'><i class='fa fa-eye'></i></a>        
     </td>
     <td style='text-align:center;'>
-        <a href='/listFollowers/{{id}}'>{{numFollowers}}</a></td>
+        <a href='/listFollowers/{{id}}'>{{numFollowers}}</a> &nbsp;
+        <a href='/followerMess/{{id}}'>
+            <i class='fa fa-arrow-circle-left'></i></a> 
+    </td>
 </tr>
 </table>
 
