star (non-functional)

--- a/app/templates/tag.html
+++ b/app/templates/tag.html
@@ -22,7 +22,9 @@ Messages containing a particular tag
 
 {{col("md-4")}}
 <br><br>
-<p>More information about <a href='/tagInfo/{{t}}'>#{{t}}</a></p>
+<p>More information about <a href='/tagInfo/{{t}}'>#{{t}}</a>.
+<br>View <a href='/popularTags'>popular tags</a>.
+</p>
 
 <h2><i class='fa fa-sliders'></i> Formatting Options</h2>
 <form id="formatingOptionForm" method=GET>
