Popular Tags on left menu

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -103,6 +103,10 @@ Uses SB-Admin
         <i class="fa fa-list-ul"></i>
         New Messages</a></li>
         
+      <li{{hpex('popularTags')}}><a href="/popularTags">
+        <i class="fa fa-hashtag"></i>
+        Popular Tags</a></li>
+        
   </ul>
 </div>
 {% endblock leftbar %}
