--- a/app/static/message.css
+++ b/app/static/message.css
@@ -26,7 +26,7 @@ blockquote.thread {
     margin: 2px 4px;
     
     box-shadow: 5px 5px 8px #888;
-    
+    line-height: 20px;
 }    
 
 .mess-header {
@@ -34,7 +34,6 @@ blockquote.thread {
    margin-bottom: 0pt;
    padding: 0.2em;
    font-size: 80%;
-    
 }    
 
 .mess .mess-footer, .mess p.mess-footer {
@@ -49,9 +48,48 @@ blockquote.thread {
     color: #569; 
 }    
 
+
+/* table of contents */
+.toc {
+  min-width: 200px;
+  display: table;
+  border: 1px solid #666;
+  background: #f4f4f4;
+  margin: 3px 20px 6px 0px;
+  padding: 4px 12px 0px 8px;
+}
+.toc:before {
+  content: "Table of contents";
+  font-weight: bold;
+}
+.toc li:before { content: ""; }
+
+
 .mess a {
     text-decoration: underline;    
 }    
+
+.mess p+p {
+    margin-top: 9px;    
+}  
+
+.mess pre {
+    line-height: 16px;
+    padding: 2px 6px 3px 5px;
+    margin-left: 0px;
+    margin-right: 0px;
+    border: 2px solid #ebc;
+    white-space: pre-wrap;
+    word-break: keep-all;
+    background: #fff;
+    color: #000;
+}    
+
+code {
+  color: #602;
+  background: #fff;
+}
+
 
 /*------------------------------------------------------------------*/
 /* quotes in messages */
