textarea line-hieght smaller to fit more text in

--- a/app/static/bozen.css
+++ b/app/static/bozen.css
@@ -109,6 +109,10 @@ input[type=number] {
   -moz-appearance: textfield;
 }
 
+.bz-form-table textarea {
+  line-height: 110% !important;
+}    
+
 .bz-read-only {
   padding: 0px 4px 0px 4px;
   min-width: 150px;
