RSS for message list pages

--- a/app/templates/followerMess.html
+++ b/app/templates/followerMess.html
@@ -31,7 +31,7 @@ Messages by people who follow a user
 
 <h2>Subscription</h2>
 
-<p><a class='btn btn-default' href="/rss/followingMess/{{id}}">
+<p><a class='btn btn-default' href="/rss/followerMess/{{id}}">
 <i class='fa fa-rss'></i> RSS @{{id}} follows</a></p>
 
 {{endrow()}}
