--- a/app/templates/accountSettings.html
+++ b/app/templates/accountSettings.html
@@ -7,7 +7,7 @@ Settings for an account
 
 {% block body %}
 {{rowcol("md-9")}}
-<h1><i class='fa fa-cog'></i> Settings for @{{id}}</h1>
+<h1><i class='fa fa-cog'></i> Settings for @{{user._id}}</h1>
 
 <p>View <a href='/blog/{{user._id}}'>@{{user._id}}'s blog</a>.
 
