--- a/app/static/message.css
+++ b/app/static/message.css
@@ -19,7 +19,7 @@ blockquote.thread {
     color: #000;
     background: #fff;
     
-    max-width: 800px;
+    //max-width: 800px;
     padding: 2px 7px;
     border: 2px solid #56a;
     border-radius: 10px;
