--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -102,7 +102,7 @@ Uses SB-Admin
         
       <li{{hpic('messList')}}><a href="/messList">
         <i class="fa fa-list-ul"></i>
-        New Messages</a></li>
+        Recent Messages</a></li>
         
       <li{{hpex('popularTags')}}><a href="/popularTags">
         <i class="fa fa-hashtag"></i>
