tidy up auto-update

--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -91,21 +91,7 @@ Unfollow @{{id}}
 
 {%block atend%}
 <script>
-//--------------------------------------------------------------------
-/* formatting options */
-
-function foChanged(){
-    /* fired when a Formatting Option has changed 
-    Fire off the form as a GET request 
-    */
-    $("#formatingOptionForm").submit();
-}    
-
-$("#id_oneLine").change(foChanged);
-$("#id_headOnly").change(foChanged);
-$("#id_mrf").change(foChanged);
-$("#id_au").change(foChanged);
-
+{{lf.jsForPage()}}
 //--------------------------------------------------------------------
 /* follow button */
 
@@ -127,7 +113,6 @@ function follow(n){
 }
 
 //--------------------------------------------------------------------
-
 </script>
 {%endblock atend%}
 
