--- a/app/templates/messList.html
+++ b/app/templates/messList.html
@@ -36,23 +36,7 @@ Write new message</a></p>
 {% endblock body %}
 {%block atend%}
 <script>
-//--------------------------------------------------------------------
-/* formatting options */
-
-function foChanged(){
-    /* fired when a Formatting Option has changed 
-    Fire off the form as a GET request 
-    */
-    $("#formatingOptionForm").submit();
-}    
-
-$("#id_oneLine").change(foChanged);
-$("#id_headOnly").change(foChanged);
-$("#id_mrf").change(foChanged);
-$("#id_au").change(foChanged);
-
-//--------------------------------------------------------------------
-{{lf.autoUpdateJS()}}
+{{lf.jsForPage()}}
 </script>
 {%endblock atend%}
 {# end #}
