--- a/app/templates/messList.html
+++ b/app/templates/messList.html
@@ -10,7 +10,7 @@ List of messages
 <h1><i class='fa fa-list-ul'></i> Recent Messages</h1>
 
 <div id="messages">
-{{messages}}
+{{lf.getMessagesH()}}
 </div>
 
 {{col("md-4")}}
@@ -24,7 +24,7 @@ Write new message</a></p>
 <h2><i class='fa fa-sliders'></i> Formatting Options</h2>
 <form id="formatingOptionForm" method=GET>
 <input type="hidden" name="x" value="x">
-{{fof.buildForm()}}
+{{lf.fof.buildForm()}}
 </form>
 
 <h2>Subscription</h2>
