--- a/app/static/message.css
+++ b/app/static/message.css
@@ -116,9 +116,9 @@ div.toc > ul > li > ul {
 .mess pre {
     line-height: 16px;
     padding: 2px 6px 3px 5px;
-    margin-left: 0px;
-    margin-right: 0px;
-    border: 2px solid #ebc;
+    margin-left: 15px;
+    margin-right: 15px;
+    border: 2px solid #f79;
     white-space: pre-wrap;
     word-break: keep-all;
     background: #fff;
