--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -29,7 +29,8 @@ Uses SB-Admin
 <link rel="stylesheet" href="/static/bozen.css">
 <link rel="stylesheet" href="/static/app.css">
 <link rel="stylesheet" href="/static/message.css">
-<link rel="stylesheet" href="/static/pygments.css">
+<!--link rel="stylesheet" href="/static/pygments.css"-->
+<link rel="stylesheet" href="/static/tango.css">
 
     <!-- Page Specific CSS -->
 
