--- a/app/templates/followerMess.html
+++ b/app/templates/followerMess.html
@@ -16,7 +16,7 @@ Messages by people who follow a user
 <a href='/blog/{{id}}'>@{{id}}</a></h1>
 
 <div id="messages">
-{{messages}}
+{{lf.getMessagesH()}}
 </div>
 
 {{col("md-4")}}
@@ -26,7 +26,7 @@ Messages by people who follow a user
 <h2><i class='fa fa-sliders'></i> Formatting Options</h2>
 <form id="formatingOptionForm" method=GET>
 <input type="hidden" name="x" value="x">
-{{fof.buildForm()}}
+{{lf.fof.buildForm()}}
 </form>
 
 <h2>Subscription</h2>
@@ -39,23 +39,7 @@ Messages by people who follow a user
 
 {%block atend%}
 <script>
-//--------------------------------------------------------------------
-/* formatting options */
-
-function foChanged(){
-    /* fired when a Formatting Option has changed 
-    Fire off the form as a GET request 
-    */
-    $("#formatingOptionForm").submit();
-}    
-
-$("#id_oneLine").change(foChanged);
-$("#id_headOnly").change(foChanged);
-$("#id_mrf").change(foChanged);
-$("#id_au").change(foChanged);
-
-//--------------------------------------------------------------------
-{{lf.autoUpdateJS()}}
+{{lf.jsForPage()}}
 </script>
 {%endblock atend%}
 {# end #}
